--- a/doc/qrDoc.tex
+++ b/doc/qrDoc.tex
@@ -11,6 +11,8 @@
 %%
 \documentclass{amsart}
 
+
+
 %% This has a default type size 10pt.  Other options are 11pt and 12pt
 %% This are set by replacing the command above by
 %% \documentclass[11pt]{amsart}
@@ -25,6 +27,9 @@
 %% package.  Uncommenting the following makes more commands
 %% available. 
 %%
+
+\usepackage{geometry}
+\geometry{a4paper,left=30mm,right=30mm} 
 
 \usepackage[utf8]{inputenc}
 %\usepackage{amssymb}
