--- a/doc/qrDoc.tex
+++ b/doc/qrDoc.tex
@@ -176,9 +176,9 @@
 %%% if not used just delete, or comment out, the following.
 %%%
 
-\begin{abstract}
-Bei der numerischen Lösung von OCPs treten dünnbesetzte strukturierte QPs auf. Es ist üblich diese Struktur mit der Hilfe eines Condensing Algorithmuses auszunutzen. Jedoch werden bei den bisher verwendeten Ansätzen viele Blockmatrizen miteinander multipliziert. Bei schlecht gestellten Problemen führt dies zu numerischen Problemen. Hier wird ein Ansatz vorgestellt, bei dem ausschließlich mit der Multiplikation von orthonormalen Matrizen gearbeitet wird.
-\end{abstract}
+%\begin{abstract}
+%Bei der numerischen Lösung von OCPs treten dünnbesetzte strukturierte QPs auf. Es ist üblich diese Struktur mit der Hilfe eines Condensing Algorithmuses auszunutzen. Jedoch werden bei den bisher verwendeten Ansätzen viele Blockmatrizen miteinander multipliziert. Bei schlecht gestellten Problemen führt dies zu numerischen Problemen. Hier wird ein Ansatz vorgestellt, bei dem ausschließlich mit der Multiplikation von orthonormalen Matrizen gearbeitet wird.
+%\end{abstract}
 
 %%
 %%  LaTeX will not make the title for the paper unless told to do so.
