das ist ein test

--- a/doc/qrDoc.tex
+++ b/doc/qrDoc.tex
@@ -194,6 +194,8 @@
 
 %\tableofcontents
 
+das ist ein Test
+
 %%
 %%  To enter text is easy.  Just type it.  A blank line starts a new
 %%  paragraph. 
